# zed-gitlab-ci-ls

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/: dependabot.yaml  release.yaml  super-linter.yaml
languages/gitlab-ci/: config.toml  highlights.scm
src/: lib.rs
